# oculus_reader

./: .gitignore  CMakeLists.txt  README.md  buttons_parser.py  config.yml  install.py  package.xml  reader.py  requirements.txt  setup.py  visualize_oculus_transforms.py
APK/: teleop-debug.apk
app/Projects/Android/: settings.gradle
app/Src/: Buttons.cpp  OculusTeleop.h
app_source/: README.md
app_source/Projects/Android/: android.debug.keystore  build.gradle  build.py
app_source/Projects/Android/gradle/wrapper/: gradle-wrapper.properties
app_source/Projects/Android/jni/: Android.mk
app_source/Src/: Buttons.h  OculusTeleop.cpp  OculusTeleop.h
config/: oculus_reader.rviz
launch/: exe.launch
oculus_reader/: install.py  reader.py  visualize_oculus_transforms.py
oculus_reader/APK/: teleop-debug.apk
scripts/: README.md  config.yml  install.py  reader.py  visualize_oculus_transforms.py
